--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
-name = "mocpose"
-version = "0.0.1"
-edition = "2021"
+name = "unimock"
+version = "0.1.0"
 authors = ["Audun Halland <audun.halldand@pm.me>"]
+edition = "2021"
 license = "MIT"
+description = "Unimock type for working with multiple trait bounds"
+repository = "https://github.com/audunhalland/unimock/"
+keywords = ["mock", "procedural-macro", "macros"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-mocpose_macros = { path = "mocpose_macros", version = "0.0.1" }
+unimock_macros = { path = "unimock_macros", version = "0.1.0" }
 
 [dev-dependencies]
 mockall = "0.11"
