--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ unimock_macros = { path = "unimock_macros", version = "0.1.0" }
 mockall = "0.11"
 async-trait = "0.1"
 tokio = { version = "1", features = ["full"] }
+cool_asserts = "1"
