--- a/unimock_macros/Cargo.toml
+++ b/unimock_macros/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/audunhalland/mocpose/"
 keywords = []
 
 [dependencies]
-syn = { version = "1.0.75", features = ["full"] }
+syn = { version = "1.0.75", features = ["full", "visit-mut"] }
 quote = "1"
 proc-macro2 = "1"
 
