--- a/unimock_macros/Cargo.toml
+++ b/unimock_macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unimock_macros"
-version = "0.1.0"
+version = "0.2.0-beta.0"
 authors = ["Audun Halland <audun.halldand@pm.me>"]
 edition = "2021"
 license = "MIT"
