--- a/unimock_macros/Cargo.toml
+++ b/unimock_macros/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "unimock_macros"
-version = "0.2.0"
-authors = ["Audun Halland <audun.halldand@pm.me>"]
+version = "0.2.1"
+authors = ["Audun Halland <audun.halland@pm.me>"]
 edition = "2021"
 license = "MIT"
 description = "Procedural macros used by unimock"
