--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,5 @@
-[package]
-name = "unimock"
-version = "0.3.0"
-authors = ["Audun Halland <audun.halland@pm.me>"]
-edition = "2021"
-license = "MIT"
-description = "Unimock type for working with multiple trait bounds"
-repository = "https://github.com/audunhalland/unimock/"
-keywords = ["mock", "procedural-macro", "macros"]
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-unimock_macros = { path = "unimock_macros", version = "0.3.0" }
-
-[dev-dependencies]
-mockall = "0.11"
-async-trait = "0.1"
-tokio = { version = "1", features = ["full"] }
+[workspace]
+members = [
+    "unimock",
+    "unimock_macros",
+]
