--- a/unimock/Cargo.toml
+++ b/unimock/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "unimock"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Audun Halland <audun.halland@pm.me>"]
 edition = "2021"
 license = "MIT"
 description = "Unimock type for working with multiple trait bounds"
 repository = "https://github.com/audunhalland/unimock/"
-keywords = ["mock", "procedural-macro", "macros"]
+keywords = ["mock"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-unimock_macros = { path = "../unimock_macros", version = "0.3.0" }
+unimock_macros = { path = "../unimock_macros", version = "0.3.1" }
 
 [dev-dependencies]
 mockall = "0.11"
