--- a/unimock_macros/Cargo.toml
+++ b/unimock_macros/Cargo.toml
@@ -1,20 +1,17 @@
 [package]
 name = "unimock_macros"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Audun Halland <audun.halland@pm.me>"]
 edition = "2021"
 license = "MIT"
 description = "Procedural macros used by unimock"
-repository = "https://github.com/audunhalland/mocpose/"
-keywords = []
+repository = "https://github.com/audunhalland/unimock/"
+keywords = ["procedural-macro", "macros"]
 
 [dependencies]
 syn = { version = "1.0.75", features = ["full", "visit-mut"] }
 quote = "1"
 proc-macro2 = "1"
-
-[dev-dependencies]
-mockall = "0.11"
 
 [lib]
 proc-macro = true
