--- a/.cargo-rdme.toml
+++ b/.cargo-rdme.toml
@@ -1,4 +1,4 @@
-readme-path = "README.md"
+readme-path = "unimock/README.md"
 # If you are using a workspace to hold multiple projects, use this to select the project from
 # which to extract the documentation from.  It can be useful to also set `readme-path` to create
 # the README file in the root of the project.
