--- a/unimock/Cargo.toml
+++ b/unimock/Cargo.toml
@@ -10,6 +10,10 @@ keywords = ["mock"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+nightly-tests = []
+
 [dependencies]
 unimock_macros = { path = "../unimock_macros", version = "0.3.2" }
 
