breaking: Don't require Clone bound for the output value in the .returns(v) combinator.
Fixes #4.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ nightly-tests = []
 
 [dependencies]
 unimock_macros = { path = "unimock_macros", version = "0.3.10" }
+lazycell = "1"
 
 [dev-dependencies]
 async-trait = "0.1"
