--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "unimock"
 version = "0.4.0-alpha.3"
 authors = ["Audun Halland <audun.halland@pm.me>"]
 edition = "2021"
+rust-version = "1.65"
 license = "MIT"
 description = "Unimock type for working with multiple trait bounds"
 repository = "https://github.com/audunhalland/unimock/"
