--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unimock"
-version = "0.4.0-alpha.3"
+version = "0.4.0"
 authors = ["Audun Halland <audun.halland@pm.me>"]
 edition = "2021"
 rust-version = "1.65"
@@ -17,7 +17,7 @@ default = []
 nightly-tests = []
 
 [dependencies]
-unimock_macros = { path = "unimock_macros", version = "0.4.0-alpha.3" }
+unimock_macros = { path = "unimock_macros", version = "0.4.0" }
 lazycell = "1"
 
 [dev-dependencies]
