--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ nightly-tests = []
 [dependencies]
 unimock_macros = { path = "unimock_macros", version = "0.4.0" }
 lazycell = "1"
+pretty_assertions = "1.3"
 
 [dev-dependencies]
 async-trait = "0.1"
