feat: New default feature `pretty-print` for optional dependency pretty_assertions

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - name: Test
         run: cargo test --all
+      - name: Test no-default-features
+        run: cargo test --no-default-features
       - name: Clippy
         run: cargo clippy -- -D warnings
 
