--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,14 @@ categories = ["development-tools", "development-tools::testing"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = []
+default = ["pretty-print"]
+pretty-print = ["dep:pretty_assertions"]
 nightly-tests = []
 
 [dependencies]
-unimock_macros = { path = "unimock_macros", version = "0.4.0" }
+unimock_macros = { path = "unimock_macros", version = "0.4.1" }
 lazycell = "1"
-pretty_assertions = "1.3"
+pretty_assertions = { version = "1.3", optional = true }
 
 [dev-dependencies]
 async-trait = "0.1"
