chore: Add more keyword variants to cargo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ rust-version = "1.65"
 license = "MIT"
 description = "Unimock type for working with multiple trait bounds"
 repository = "https://github.com/audunhalland/unimock/"
-keywords = ["test", "mock"]
+keywords = ["test", "testing", "mock", "mocking"]
 categories = ["development-tools", "development-tools::testing"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
