chore: Update cargo package description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Audun Halland <audun.halland@pm.me>"]
 edition = "2021"
 rust-version = "1.65"
 license = "MIT"
-description = "Unimock type for working with multiple trait bounds"
+description = "A versatile and developer-friendly trait mocking library"
 repository = "https://github.com/audunhalland/unimock/"
 keywords = ["test", "testing", "mock", "mocking"]
 categories = ["development-tools", "development-tools::testing"]
