--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ nightly-tests = []
 
 [dependencies]
 unimock_macros = { path = "unimock_macros", version = "0.4.4" }
-lazycell = "1"
+once_cell = "1"
 pretty_assertions = { version = "1.3", optional = true }
 
 [dev-dependencies]
