--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ nightly-tests = []
 [dependencies]
 unimock_macros = { path = "unimock_macros", version = "0.4.8" }
 once_cell = "1"
+ghost = "0.1.7"
 pretty_assertions = { version = "1.3", optional = true }
 
 [dev-dependencies]
