--- a/unimock_macros/Cargo.toml
+++ b/unimock_macros/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/audunhalland/unimock/"
 keywords = ["procedural-macro", "macros"]
 
 [dependencies]
-syn = { version = "1.0.75", features = ["full", "visit-mut"] }
+syn = { version = "1.0.75", features = ["full", "visit-mut", "extra-traits"] }
 quote = "1"
 proc-macro2 = "1"
 
