--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,20 @@ default = ["pretty-print", "mock-std"]
 pretty-print = ["dep:pretty_assertions"]
 nightly-tests = []
 mock-std = []
+unstable-doc-cfg = []
 
 [dependencies]
 unimock_macros = { path = "unimock_macros", version = "0.4.12" }
 once_cell = "1.17"
 pretty_assertions = { version = "1.3", optional = true }
+doc-cfg = "0.1"
 
 [dev-dependencies]
 async-trait = "0.1"
 tokio = { version = "1", features = ["full"] }
+
+[package.metadata.docs.rs]
+features = ["unstable-doc-cfg"]
 
 [workspace]
 members = ["unimock_macros"]
