--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,15 +13,16 @@ categories = ["development-tools", "development-tools::testing"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["pretty-print", "mock-std"]
+default = ["pretty-print", "std"]
 pretty-print = ["dep:pretty_assertions"]
 nightly-tests = []
-mock-std = []
+std = []
 unstable-doc-cfg = []
 
 [dependencies]
 unimock_macros = { path = "unimock_macros", version = "0.4.12" }
 once_cell = "1.17"
+spin = "0.9"
 pretty_assertions = { version = "1.3", optional = true }
 doc-cfg = "0.1"
 
