--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unimock"
-version = "0.4.12"
+version = "0.5.0-alpha.0"
 authors = ["Audun Halland <audun.halland@pm.me>"]
 edition = "2021"
 rust-version = "1.65"
@@ -20,7 +20,7 @@ std = []
 unstable-doc-cfg = []
 
 [dependencies]
-unimock_macros = { path = "unimock_macros", version = "0.4.12" }
+unimock_macros = { path = "unimock_macros", version = "0.5.0-alpha.0" }
 once_cell = "1.17"
 spin = "0.9"
 pretty_assertions = { version = "1.3", optional = true }
