--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,16 @@ categories = ["development-tools", "development-tools::testing"]
 [features]
 default = ["pretty-print", "std"]
 pretty-print = ["dep:pretty_assertions"]
-nightly-tests = []
 std = []
+spin-lock = ["dep:spin"]
+nightly-tests = []
 unstable-doc-cfg = []
 
 [dependencies]
 unimock_macros = { path = "unimock_macros", version = "0.5.0-alpha.0" }
 once_cell = "1.17"
-spin = "0.9"
 pretty_assertions = { version = "1.3", optional = true }
+spin = { version = "0.9", optional = true }
 doc-cfg = "0.1"
 
 [dev-dependencies]
