--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["development-tools", "development-tools::testing"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["pretty-print", "std"]
+default = ["std", "pretty-print"]
 pretty-print = ["dep:pretty_assertions"]
 std = []
 spin-lock = ["dep:spin"]
