--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,8 +15,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - uses: taiki-e/install-action@cargo-hack
-      - name: Test
-        run: cargo hack --feature-powerset --exclude-features default,nightly-tests,unstable-doc-cfg test --all
+      - name: Test macros
+        run: cd unimock_macros && cargo test
+      - name: Test std
+        run: cargo hack --feature-powerset --features std --exclude-features default,spin-lock,nightly-tests,unstable-doc-cfg test
+      - name: Test no_std
+        run: cargo hack --feature-powerset --exclude-features std,mock-std,default,nightly-tests,unstable-doc-cfg test
       - name: Doctest
         run: cargo test --doc
       - name: Clippy
