--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unimock"
-version = "0.5.0-alpha.0"
+version = "0.5.0"
 authors = ["Audun Halland <audun.halland@pm.me>"]
 edition = "2021"
 rust-version = "1.65"
@@ -23,7 +23,7 @@ nightly-tests = []
 unstable-doc-cfg = []
 
 [dependencies]
-unimock_macros = { path = "unimock_macros", version = "0.5.0-alpha.0" }
+unimock_macros = { path = "unimock_macros", version = "0.5.0" }
 once_cell = "1.17"
 pretty_assertions = { version = "1.3", optional = true }
 spin = { version = "0.9.8", optional = true }
