--- a/unimock_macros/Cargo.toml
+++ b/unimock_macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unimock_macros"
-version = "0.5.0-alpha.0"
+version = "0.5.0"
 authors = ["Audun Halland <audun.halland@pm.me>"]
 edition = "2021"
 license = "MIT"
