--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ unimock_macros = { path = "unimock_macros", version = "0.5.4" }
 once_cell = "1.17"
 pretty_assertions = { version = "1.3", optional = true }
 spin = { version = "0.9.8", optional = true }
+polonius-the-crab = "0.3"
 
 [dev-dependencies]
 async-trait = "0.1"
