feat: Add no_std support
The once_cell crate uses std by default and needs to be disabled with features.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Test std
         run: cargo hack --feature-powerset --features std --exclude-features default,spin-lock,nightly-tests,unstable-doc-cfg test
       - name: Test no_std
-        run: cargo hack --feature-powerset --exclude-features std,mock-std,default,nightly-tests,unstable-doc-cfg test
+        run: cargo hack --feature-powerset --features critical-section --exclude-features std,mock-std,default,nightly-tests,unstable-doc-cfg test
       - name: Doctest
         run: cargo test --doc --features mock-core,mock-std
       - name: Clippy
