--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,22 +15,24 @@ categories = ["development-tools", "development-tools::testing", "no-std"]
 [features]
 default = ["std", "pretty-print"]
 pretty-print = ["dep:pretty_assertions"]
-std = []
+std = ["once_cell/std"]
 spin-lock = ["dep:spin"]
 mock-core = []
 mock-std = ["std", "mock-core"]
 nightly-tests = []
 unstable-doc-cfg = []
+critical-section = ["once_cell/critical-section"]
 
 [dependencies]
 unimock_macros = { path = "unimock_macros", version = "0.5.5" }
-once_cell = "1.17"
+once_cell = { version = "1.17", default-features = false }
 polonius-the-crab = "0.3"
 pretty_assertions = { version = "1.3", optional = true }
 spin = { version = "0.9.8", optional = true }
 
 [dev-dependencies]
 async-trait = "0.1"
+critical-section = { version = "1.1.2", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
 
 [lib]
