--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ spin = { version = "0.9.8", optional = true }
 async-trait = "0.1"
 critical-section = { version = "1.1.2", features = ["std"] }
 tokio = { version = "1", features = ["full"] }
+rustversion = "1"
 
 [lib]
 # do not run doctest by default with `cargo hack`. They are tested with a separate `cargo test --doc` run.
