--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ std = ["once_cell/std"]
 spin-lock = ["dep:spin"]
 mock-core = []
 mock-std = ["std", "mock-core"]
+mock-futures-0-3 = ["std", "dep:futures-0-3"]
+mock-tokio-1 = ["std", "dep:tokio-1"]
 nightly-tests = []
 unstable-doc-cfg = []
 critical-section = ["once_cell/critical-section"]
@@ -29,11 +31,13 @@ once_cell = { version = "1.17", default-features = false }
 polonius-the-crab = "0.3"
 pretty_assertions = { version = "1.3", optional = true }
 spin = { version = "0.9.8", optional = true }
+futures-0-3 = { package = "futures", version = "0.3", optional = true }
+tokio-1 = { package = "tokio", version = "1", default-features = false, optional = true }
 
 [dev-dependencies]
 async-trait = "0.1"
 critical-section = { version = "1.1.2", features = ["std"] }
-tokio = { version = "1", features = ["full"] }
+tokio-1 = { package = "tokio", version = "1", features = ["full"] }
 rustversion = "1"
 
 [lib]
