--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "unimock"
-version = "0.5.8"
+version = "0.6.0-rc1"
 authors = ["Audun Halland <audun.halland@pm.me>"]
 edition = "2021"
-rust-version = "1.65"
+rust-version = "1.70"
 license = "MIT"
 description = "A versatile and developer-friendly trait mocking library"
 repository = "https://github.com/audunhalland/unimock/"
@@ -26,7 +26,7 @@ unstable-doc-cfg = []
 critical-section = ["once_cell/critical-section"]
 
 [dependencies]
-unimock_macros = { path = "unimock_macros", version = "0.5.8" }
+unimock_macros = { path = "unimock_macros", version = "0.6.0-rc1" }
 once_cell = { version = "1.17", default-features = false }
 polonius-the-crab = "0.3"
 pretty_assertions = { version = "1.3", optional = true }
