feat: fragile output references
fixes #51

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,10 +17,16 @@ jobs:
       - uses: taiki-e/install-action@cargo-hack
       - name: Test macros
         run: cd unimock_macros && cargo test
-      - name: Test std
-        run: cargo hack --feature-powerset --features std --exclude-features default,spin-lock,nightly-tests,unstable-doc-cfg test
-      - name: Test no_std
-        run: cargo hack --feature-powerset --features critical-section --exclude-features std,mock-std,default,nightly-tests,unstable-doc-cfg test
+      - name: Test
+        run: >
+          cargo hack --feature-powerset \
+            --exclude-no-default-features \
+            --at-least-one-of std,critical-section \
+            --mutually-exclusive-features std,critical-section \
+            --mutually-exclusive-features std,spin-lock \
+            --group-features mock-std,mock-tokio-1,mock-futures-io-0-3 \
+            --exclude-features nightly-tests,unstable-doc-cfg \
+            test
       - name: Doctest
         run: cargo test --doc --features mock-core,mock-std
       - name: Clippy
