--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ categories = ["development-tools", "development-tools::testing", "no-std"]
 
 [features]
 default = ["std", "pretty-print"]
-pretty-print = ["dep:pretty_assertions"]
 std = ["once_cell/std"]
+pretty-print = ["dep:pretty_assertions"]
+fragile = ["std", "dep:fragile"]
 spin-lock = ["dep:spin"]
 mock-core = []
 mock-std = ["std", "mock-core"]
@@ -30,6 +31,7 @@ unimock_macros = { path = "unimock_macros", version = "0.6.3" }
 once_cell = { version = "1.17", default-features = false }
 polonius-the-crab = "0.4"
 pretty_assertions = { version = "1.3", optional = true }
+fragile = { version = "2.0.0", optional = true }
 spin = { version = "0.9.8", optional = true }
 futures-io-0-3 = { package = "futures-io", version = "0.3.30", optional = true }
 tokio-1 = { package = "tokio", version = "1.36", default-features = false, optional = true }
@@ -45,7 +47,7 @@ rustversion = "1"
 doctest = false
 
 [package.metadata.docs.rs]
-features = ["unstable-doc-cfg", "mock-core", "mock-std", "mock-futures-io-0-3", "mock-tokio-1"]
+features = ["unstable-doc-cfg", "fragile", "mock-core", "mock-std", "mock-futures-io-0-3", "mock-tokio-1"]
 
 [workspace]
 members = ["unimock_macros"]
