--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,6 +25,7 @@ jobs:
             --mutually-exclusive-features std,critical-section \
             --mutually-exclusive-features std,spin-lock \
             --group-features mock-std,mock-tokio-1,mock-futures-io-0-3 \
+            --group-features critical-section,spin-lock \
             --exclude-features nightly-tests,unstable-doc-cfg \
             test
       - name: Doctest
