--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,14 @@ std = ["once_cell/std"]
 pretty-print = ["dep:pretty_assertions"]
 fragile = ["std", "dep:fragile"]
 spin-lock = ["dep:spin"]
+critical-section = ["once_cell/critical-section"]
 mock-core = []
 mock-std = ["std", "mock-core"]
 mock-futures-io-0-3 = ["std", "dep:futures-io-0-3"]
 mock-tokio-1 = ["std", "dep:tokio-1"]
+mock-embedded-hal-1 = ["dep:embedded-hal-1", "mock-core"]
 nightly-tests = []
 unstable-doc-cfg = []
-critical-section = ["once_cell/critical-section"]
 
 [dependencies]
 unimock_macros = { path = "unimock_macros", version = "0.6.4" }
@@ -35,6 +36,7 @@ fragile = { version = "2.0.0", optional = true }
 spin = { version = "0.9.8", optional = true }
 futures-io-0-3 = { package = "futures-io", version = "0.3.30", optional = true }
 tokio-1 = { package = "tokio", version = "1.36", default-features = false, optional = true }
+embedded-hal-1 = { package = "embedded-hal", version = "1.0.0", optional = true }
 
 [dev-dependencies]
 async-trait = "0.1"
@@ -47,7 +49,15 @@ rustversion = "1"
 doctest = false
 
 [package.metadata.docs.rs]
-features = ["unstable-doc-cfg", "fragile", "mock-core", "mock-std", "mock-futures-io-0-3", "mock-tokio-1"]
+features = [
+    "unstable-doc-cfg",
+    "fragile",
+    "mock-core",
+    "mock-std",
+    "mock-futures-io-0-3",
+    "mock-tokio-1",
+    "mock-embedded-hal-1",
+]
 
 [workspace]
 members = ["unimock_macros"]
